# compas_model

./: .bumpversion.cfg  .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  beams0.mtl  block.json  environment.yml  index.html  mkdocs.yml  model.json  objects.inv  pyproject.toml  requirements-dev.txt  requirements-viz.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tasks.py  versions.json
.github/workflows/: build.yml  docs.yml
0.2.0/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.2.0/.doctrees/: api.doctree
0.2.0/api/: compas_model.algorithms.html  compas_model.elements.html  compas_model.interactions.html  compas_model.materials.html  compas_model.model.html  compas_model.notebook.html  compas_model.scene.html
0.3.0/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
0.3.0/.doctrees/: installation.doctree
0.3.0/api/: compas_model.algorithms.html  compas_model.elements.html  compas_model.interactions.html  compas_model.materials.html  (+3 more)
0.4.2/: .buildinfo  api.html  genindex.html  installation.html  search.html  searchindex.js
0.4.3/: examples.html  index.html  license.html  objects.inv  tutorial.html
0.4.4/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.4.5/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.5.0/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
0.5.1/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  searchindex.js  tutorial.html
0.6.0/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.6.1/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.7.0/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
__temp/: beam.py  blockobject.py
changelog/: index.html
css/: compas.css
data/: beams.ply  beams3.objbak  beams3.stl  beams3.stlbak  crea_4x4.json  example0_0.json  example0_0.stp  example0_1.json  example0_1.stp  frame.json  model_how_to_use_it_element.json  model_how_to_use_it_model.json  model_how_to_use_it_model_node.json  model_how_to_use_it_model_tree.json  my_model.json  my_model_node.json  my_model_tree.json  plate.json
docs/: acknowledgements.rst  api.rst  conf.py  devguide.rst  examples.rst  index.md  index.rst  installation.md  installation.rst  license.rst  tutorial.rst
examples/: index.html
installation/: index.html
latest/: .buildinfo  acknowledgements.html  api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
license/: index.html
notebooks/: test_blockmodel.ipynb
scripts/: bbox.py  blockmodel_arch.json  bvh.py  crossvault_meshes.json  fea_beam.py  intersections.py  minkowski.py  test_blockmodel.py  test_blockmodel_arch.py  test_blockmodel_arch_load.py  test_blockmodel_vault.py  test_blockmodel_vault_3dec.py  test_connected_by.py  test_intersections.py  test_model.py
search/: search_index.json
stable/: index.html
tests/: test_algorithms_bvh.py  test_algorithms_collider.py  test_algorithms_contacts.py  test_algorithms_gjk2.py  test_algorithms_intersections.py  test_algorithms_pca_box.py  test_element.py  test_interactiongraph.py  test_model.py  test_trivial.py
(+439 files in other folders)
